# teams-mcp-python

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: oauth2_library.md
examples/: github_mcp.py  google_drive_mcp.py
src/mcp_oauth2/: __init__.py  base.py  tools.py
src/mcp_oauth2/providers/: __init__.py  generic.py  google.py  microsoft.py
src/teams_mcp/: __init__.py  __main__.py  api.py  config.py  server.py  tools.py
src/teams_mcp/api/: __init__.py  client.py  rate_limiter.py
src/teams_mcp/tools/: __init__.py  create_chat.py  get_messages.py  list_chats.py  send_message.py
tests/: __init__.py  test_oauth2_providers.py  test_oauth2_tools.py
