[project]
name = "teams-mcp-python"
version = "0.2.1"
description = "Microsoft Teams MCP server with reusable OAuth2 authentication"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Teams MCP Python Contributors" }]
requires-python = ">=3.8"
homepage = "https://github.com/shmaxi/teams-mcp-python"
repository = "https://github.com/shmaxi/teams-mcp-python"
keywords = ["mcp", "teams", "microsoft", "oauth2", "chat", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-aiofiles",
]

[project.scripts]
teams-mcp = "teams_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_oauth2", "src/teams_mcp"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "PL"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true